# ESVO

esvo_core/: CMakeLists.txt  esvo_system.perspective  esvo_system.rviz  esvo_system_DSEC.perspective  esvo_system_DSEC.rviz
esvo_core/calib/rpg/: left.yaml  right.yaml
esvo_core/calib/tum/: left.yaml  right.yaml
esvo_core/calib/tum_A/: imu.yaml  left.yaml  right.yaml
esvo_core/calib/tum_B/: imu.yaml  left.yaml  right.yaml
esvo_core/cfg/mapping/: mapping_dsec.yaml  mapping_tum.yaml
esvo_core/cfg/time_surface/: ts_parameters.yaml
esvo_core/src/: esvo_MVStereo.cpp  esvo_MVStereoNode.cpp  esvo_Mapping.cpp  esvo_MappingNode.cpp  esvo_Tracking.cpp  esvo_TrackingNode.cpp
esvo_time_surface/: CMakeLists.txt  esvo_time_surface.perspective
esvo_time_surface/cfg/: dsec_city.yaml  rpg.yaml  tum_vie_A.yaml  tum_vie_B.yaml
esvo_time_surface/include/esvo_time_surface/: SedtsWrapper.h  TicToc.h  TimeSurface.h
esvo_time_surface/launch/: stereo_time_surface.launch
esvo_time_surface/launch/rosbag_launcher/dsec/zurich_city_04_a/: calib_info.launch  zurich_city_04_a.launch
esvo_time_surface/launch/rosbag_launcher/hkust/: hkust_lab.launch
esvo_time_surface/launch/rosbag_launcher/rpg/: rpg_bin.launch  rpg_boxes.launch  rpg_desk.launch  rpg_monitor.launch
esvo_time_surface/launch/rosbag_launcher/tum_vie/: calib_info.launch  tum_bike_hard.launch
esvo_time_surface/launch/rosbag_launcher/upenn/: upenn_indoor_flying1.launch
esvo_time_surface/src/: SedtsWrapper.cpp  TimeSurface.cpp  TimeSurface_node.cpp
events_repacking_helper/src/: EventMessageEditor.cpp
(+48 files in other folders)
